syntax = "proto3";

package nlx.management;

// Based on:
// https://gitlab.com/commonground/nlx/nlx/-/blob/master/management-api/api/management.proto

// For some reason the `Service` prefix is dropped in Go
service Management {
  // As the `Inway` is the only field of the `RegisterInwayRequest` message, for
  // some reason it's skipped entirely
  rpc RegisterInway(Inway) returns (Inway) {}

  rpc GetInwayConfig(GetInwayConfigRequest) returns (GetInwayConfigResponse) {}
}

message Inway {
  message Service { string name = 1; }

  string name = 1;
  string version = 2;
  string hostname = 3;
  string self_address = 4;
  repeated Service services = 5;
  string ip_address = 6;
}

message RegisterInwayRequest { Inway inway = 1; }

message RegisterInwayResponse { Inway inway = 1; }

message GetInwayConfigRequest { string name = 1; }

message GetInwayConfigResponse {
  repeated Service services = 1;
  bool is_organization_inway = 2;

  message Service {
    string name = 1;
    string endpoint_url = 2;
    string documentation_url = 3;
    string api_specification_url = 4;
    bool internal = 5;
    string tech_support_contact = 6;
    string public_support_contact = 7;
    AuthorizationSettings authorization_settings = 8;
    int32 one_time_costs = 9;
    int32 monthly_costs = 10;
    int32 request_costs = 11;

    message AuthorizationSettings {
      message Authorization {
        message Organization {
          string serial_number = 1;
          string name = 2;
        }

        Organization organization = 1;
        string public_key_hash = 2;
        string public_key_pem = 3;
      }
      repeated Authorization authorizations = 1;
    }
  }
}
